--- a/app/src/main/res/layout/layout_news_list_item.xml
+++ b/app/src/main/res/layout/layout_news_list_item.xml
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/news_title"
-                android:text="The Title of a Blog"
+                android:text="The Title"
                 android:textSize="20sp"
                 />
 
@@ -57,8 +57,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:id="@+id/news_author"
-                    android:text="Mitch Tabian"
+                    android:id="@+id/news_source"
+                    android:text="Dave"
                     android:textSize="12sp"
                     android:textStyle="bold"
                     android:textColor="#bababa"
