--- a/app/src/main/res/layout/layout_news_list_item.xml
+++ b/app/src/main/res/layout/layout_news_list_item.xml
@@ -7,25 +7,23 @@
             type="com.davevarga.latestnews.NewsPost"/>
     </data>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="2dp"
-        app:cardElevation="10dp"
-        app:cardPreventCornerOverlap="false">
+            <RelativeLayout
+                android:id="@+id/relativelayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:elevation="20dp"
+                android:background="@drawable/myrect">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/news_image"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_margin="0dp"
+                android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:padding="0dp"
                 android:scaleType="fitXY"
+                android:background="@drawable/gradient"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="10dp"
+                android:layout_alignBottom="@id/news_image"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -47,20 +45,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@{newsItem.title}"
+                    android:fontFamily="sans-serif"
+                    android:padding="12dp"
+                    android:textColor="#f2f2f2"
                     android:textSize="20sp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    >
 
 
                     <TextView
                         android:id="@+id/news_source"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
                         android:layout_weight="1"
+                        android:padding="12dp"
+                        android:fontFamily="s"
                         android:text="@{newsItem.source.name}"
                         android:textColor="#bababa"
                         android:textSize="12sp"
@@ -70,9 +73,8 @@
                         android:id="@+id/news_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
                         android:layout_weight="0"
+                        android:padding="12dp"
                         android:text="@{newsItem.publishedAt}"
                         android:textColor="#bababa"
                         android:textSize="12sp" />
@@ -81,8 +83,8 @@
 
             </LinearLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            </RelativeLayout>
 
 
-    </androidx.cardview.widget.CardView>
+
 </layout>
