--- a/app/src/main/res/layout/layout_news_list_item.xml
+++ b/app/src/main/res/layout/layout_news_list_item.xml
@@ -15,80 +15,89 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:background="@drawable/myrect"
-        android:elevation="20dp"
+        android:layout_margin="8dp"
         tools:background="@android:color/white">
 
 
-        <ImageView
-            android:id="@+id/news_image"
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:background="@drawable/gradient"
-            android:padding="0dp"
-            android:scaleType="fitXY"
-
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:background="@android:color/white" />
-
-
-        <LinearLayout
-            android:id="@+id/container1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/news_image"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
+            app:cardElevation="20dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/myrect"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/news_image">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/news_title"
+            <ImageView
+                android:id="@+id/news_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:padding="12dp"
-                android:text="@{newsItem.postTitle}"
-                android:textColor="#f2f2f2"
-                android:textSize="20sp"
-                tools:text="New Title" />
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:background="@android:color/white" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:id="@+id/news_source"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="s"
-                    android:padding="12dp"
-                    android:text="@{newsItem.postSource.sourceName}"
-                    android:textColor="#bababa"
-                    android:textSize="12sp"
-                    android:textStyle="bold" />
+                android:id="@+id/container1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@id/news_image"
+                android:gravity="bottom"
+                android:orientation="vertical"
+                android:background="@drawable/gradient"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
 
                 <TextView
-                    android:id="@+id/news_date"
+                    android:id="@+id/news_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:padding="12dp"
+                    android:text="@{newsItem.postTitle}"
+                    android:textColor="#f2f2f2"
+                    android:textSize="20sp"
+                    tools:text="New Title" />
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:padding="12dp"
-                    android:text="@{newsItem.postDate}"
-                    android:textColor="#bababa"
-                    android:textSize="12sp" />
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:id="@+id/news_source"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="s"
+                        android:padding="12dp"
+                        android:text="@{newsItem.postSource.sourceName}"
+                        android:textColor="#bababa"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/news_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:padding="12dp"
+                        android:text="@{newsItem.postDate}"
+                        android:textColor="#bababa"
+                        android:textSize="12sp" />
+                </LinearLayout>
+
+
             </LinearLayout>
 
+        </com.google.android.material.card.MaterialCardView>
 
-        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
