--- a/app/src/main/res/layout/layout_news_list_item.xml
+++ b/app/src/main/res/layout/layout_news_list_item.xml
@@ -8,6 +8,7 @@
         <variable
             name="newsItem"
             type="com.davevarga.latestnews.NewsPost" />
+
         <variable
 
             name="converter"
@@ -15,24 +16,23 @@
     </data>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="230dp"
+        android:layout_marginVertical="12dp"
+        app:cardElevation="24dp"
+        android:outlineAmbientShadowColor="#AC6969"
+        android:outlineSpotShadowColor="#9A8989"
         android:layout_marginHorizontal="16dp"
-        tools:background="@android:color/white">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-
-        <com.google.android.material.card.MaterialCardView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="230dp"
-            app:cardElevation="20dp"
-            android:layout_marginVertical="12dp"
-            android:background="@drawable/myrect"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="wrap_content"
+            >
 
             <ImageView
                 android:id="@+id/news_image"
@@ -40,68 +40,60 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
+                android:foreground="@drawable/gradient"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:background="@android:color/white" />
+                tools:src="@tools:sample/avatars" />
 
-            <LinearLayout
-                android:id="@+id/container1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignBottom="@id/news_image"
-                android:gravity="bottom"
-                android:orientation="vertical"
-                android:background="@drawable/gradient"
+
+            <TextView
+                android:id="@+id/news_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:padding="12dp"
+                android:text="@{newsItem.postTitle}"
+                android:textColor="#f2f2f2"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/news_source"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:text="My News Title" />
+
+
+            <TextView
+                android:id="@+id/news_source"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="12dp"
+                android:text="@{newsItem.postSource.sourceName}"
+                android:textColor="#bababa"
+                android:textSize="12sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                tools:text="NYE Times" />
 
-                <TextView
-                    android:id="@+id/news_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif"
-                    android:padding="12dp"
-                    android:text="@{newsItem.postTitle}"
-                    android:textColor="#f2f2f2"
-                    android:textSize="20sp"
-                    tools:text="New Title" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+            <TextView
+                android:id="@+id/news_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:padding="12dp"
+                android:text="@{newsItem.postDate.subSequence(0,10).toString()}"
+                android:textColor="#bababa"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/news_source"
+                tools:text="@tools:sample/date/hhmmss" />
 
 
-                    <TextView
-                        android:id="@+id/news_source"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="s"
-                        android:padding="12dp"
-                        android:text="@{newsItem.postSource.sourceName}"
-                        android:textColor="#bababa"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/news_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        android:padding="12dp"
-                        android:text="@{newsItem.postDate.subSequence(0,10).toString()}"
-                        android:textColor="#bababa"
-                        android:textSize="12sp" />
-                </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-            </LinearLayout>
-
-        </com.google.android.material.card.MaterialCardView>
+    </com.google.android.material.card.MaterialCardView>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
