--- a/app/src/main/res/layout/layout_news_list_item.xml
+++ b/app/src/main/res/layout/layout_news_list_item.xml
@@ -7,12 +7,8 @@
 
         <variable
             name="newsItem"
-            type="com.davevarga.latestnews.NewsPost" />
+            type="com.davevarga.latestnews.models.NewsPost" />
 
-        <variable
-
-            name="converter"
-            type="com.davevarga.latestnews.Converter.Companion" />
     </data>
 
 
